syntax = "proto3";

package schedule;

option go_package = "github.com/taki-umi/aques-sample-service/backend/internal/proto;proto";

service ScheduleService {
  rpc GetSchedule (ScheduleRequest) returns (ScheduleResponse) {}
}

message ScheduleRequest {
  int32 member_id = 1;
}

message ScheduleResponse {
  repeated string schedule_names = 1;
}
